# Kinetic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  fly-frontend.toml  fly.toml  prompt.md  pyproject.toml
.claude/: settings.json
.claude/agents/: kinetic.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  logging.py  main.py  trainer_prompt.py
backend/app/models/: api_key.py  exercise.py  profile.py  workout.py
backend/app/routers/: admin.py  api_keys.py  auth.py  exercises.py  generate.py  openai_models.py  profile.py  workouts.py
backend/app/scripts/: seed_workouts.py
frontend/: Dockerfile  eslint.config.js  fly.toml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/scripts/: gen-icons.mjs  screenshot.mjs  verify-metrics.mjs  verify-profile.mjs  verify-summary.mjs
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  exercises.ts  openaiModels.ts  profile.ts  workouts.ts
frontend/src/components/: ActiveTopAppBar.tsx  AdjustWorkoutSheet.tsx  BottomNav.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExerciseCard.tsx  ExercisePickerChip.tsx  ExercisePickerSheet.tsx  LoadingSkeleton.tsx  MetricsChart.tsx  NewWorkoutModal.tsx  SetRow.tsx  StartButton.tsx  StatCards.tsx  TopAppBar.tsx  WorkoutCard.tsx
frontend/src/context/: UnitContext.tsx
frontend/src/data/: quotes.ts
frontend/src/hooks/: useExercises.ts  useProfile.ts  useWorkout.ts  useWorkouts.ts
frontend/src/screens/: ActiveWorkoutScreen.tsx  LoginScreen.tsx  MetricsScreen.tsx  ProfileScreen.tsx  StartWorkoutScreen.tsx  WorkoutSummaryScreen.tsx
frontend/src/utils/: units.ts
infra/: fly-frontend.toml  fly.toml
mcp/: Dockerfile  fly.toml  pyproject.toml  server.py
