[project]
name = "kinetic-backend"
version = "0.1.0"
description = "Kinetic FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "motor==3.6.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "pydantic[email]>=2.10,<3",
    "pydantic-settings>=2.5,<3",
    "openai>=1.50,<2",
    "requests>=2.34.2",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mongomock-motor>=0.0.34",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
